--- a/src/components/Navigation/Navigation.module.scss
+++ b/src/components/Navigation/Navigation.module.scss
@@ -1,45 +1,52 @@
 @import "../../styles/constants.scss";
 
 .wrapper {
-    background: #000000;
-    width: 13%;
-    height: 93vh;
-    // color: #fff;
-    color: #444;
-    font-weight: 500;
-    border-radius: 20px;
+  background: #000000;
+  width: 14%;
+  height: 93vh;
+  // color: #fff;
+  color: #444;
+  font-weight: 500;
+  border-radius: 20px;
+  box-shadow: 3px 5px 11px 1px rgba(0, 0, 0, 0.29);
+  -webkit-box-shadow: 3px 5px 11px 1px rgba(0, 0, 0, 0.29);
+  -moz-box-shadow: 3px 5px 11px 1px rgba(0, 0, 0, 0.29);
 
-    .upperElements{
-        width: 100%;
-        border-top-left-radius: 20px;
-        border-top-right-radius: 20px;
-        height: 15%;
-        // border-bottom: 0.1rem solid #fff;
-        display: flex;
-        justify-content: center;
-        align-items: center;
+  .upperElements {
+    width: 100%;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    height: 15%;
+    // border-bottom: 0.1rem solid #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
-        img{
-            image-resolution: 100dpi;
-            height: 70px;
-            width: 52px;
-        }
+    img {
+      image-resolution: 100dpi;
+      height: 70px;
+      width: 52px;
     }
+  }
 
-    .middleElements{
-        width: 100%;
-        height: 70%;
-        display: flex;
-        justify-content: left;
-        flex-direction: column;
-        padding-left: 2rem;
-    }
+  .middleElements {
+    width: 100%;
+    height: 70%;
+    display: flex;
+    justify-content: left;
+    flex-direction: column;
+    row-gap: 1rem;
+    color: #fff;
+    padding-top: 2rem;
+  }
 
-    .lowerElements{
-        width: 100%;
-        padding-left: 2rem;
-        border-bottom-left-radius: 20px;
-        border-bottom-right-radius: 20px;
-
-    }
+  .lowerElements {
+    width: 100%;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    display: flex;
+    justify-content: left;
+    flex-direction: column;
+    row-gap: 0.5rem;
+  }
 }
