--- a/src/styles/app.module.scss
+++ b/src/styles/app.module.scss
@@ -6,16 +6,25 @@
   color: #414141;
   padding: 1rem; // This is padding and spacing inside
   margin: 1rem; // this is for spacing with monitor width
-  border-radius: 20px;
-  background: #c31432; /* fallback for old browsers */
-  background: -webkit-linear-gradient(
-    to right,
-    #240b36,
-    #c31432
-  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: rgb(255, 201, 201);
   background: linear-gradient(
-    to right,
-    #240b36,
-    #c31432
-  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    90deg,
+    rgba(255, 201, 201, 1) 0%,
+    rgba(249, 255, 223, 1) 42%,
+    rgba(218, 221, 255, 1) 100%
+  );
+  border-radius: 20px;
+  // background: #c31432; /* fallback for old browsers */
+  // background: -webkit-linear-gradient(
+  //   to right,
+  //   #240b36,
+  //   #c31432
+  // ); /* Chrome 10-25, Safari 5.1-6 */
+  // background: linear-gradient(
+  //   to right,
+  //   #240b36,
+  //   #c31432
+  // ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  display: flex;
+  justify-content: space-around !important;
 }
