fixed css of left Navigation Bar.

--- a/src/components/Navigation/MenuItems/MenuItems.module.scss
+++ b/src/components/Navigation/MenuItems/MenuItems.module.scss
@@ -36,13 +36,14 @@
       border-left: none;
       color: #fff;
       cursor: pointer;
-
+      
       .bIcon {
         font-size: 1.2rem;
       }
 
       .bText {
         font-size: 0.95rem;
+        font-weight: bold;
       }
     }
   }
