--- a/src/components/Navigation/MenuItems/MenuItems.module.scss
+++ b/src/components/Navigation/MenuItems/MenuItems.module.scss
@@ -36,7 +36,7 @@
       border-left: none;
       color: #fff;
       cursor: pointer;
-      
+      transition: 0.15s ease;
       .bIcon {
         font-size: 1.2rem;
       }
